--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "expo": "~52.0.37",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
-    "react-native": "0.76.7"
+    "react-hook-form": "^7.54.2",
+    "react-native": "0.76.7",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
