--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "expo": "~52.0.37",
     "expo-status-bar": "~2.0.1",
+    "lucide-react-native": "^0.475.0",
     "react": "18.3.1",
     "react-hook-form": "^7.54.2",
     "react-native": "0.76.7",
+    "react-native-svg": "15.8.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
