--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@hookform/resolvers": "^4.1.0",
     "expo": "~52.0.37",
     "expo-status-bar": "~2.0.1",
+    "lucide-react": "^0.475.0",
     "react": "18.3.1",
-    "react-native": "0.76.7"
+    "react-hook-form": "^7.54.2",
+    "react-native": "0.76.7",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
