--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@hookform/resolvers": "^4.1.0",
     "expo": "~52.0.37",
     "expo-status-bar": "~2.0.1",
-    "lucide-react-native": "^0.475.
+    "lucide-react-native": "^0.475",
     "react": "18.3.1",
     "react-hook-form": "^7.54.2",
     "react-native": "0.76.7",
