--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^4.1.0",
+    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/native-stack": "^7.2.0",
     "expo": "~52.0.37",
     "expo-status-bar": "~2.0.1",
     "lucide-react": "^0.475.0",
@@ -21,6 +23,7 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~18.3.12",
+    "@types/react-navigation": "^3.4.0",
     "typescript": "^5.3.3"
   },
   "private": true
